--- a/contact_us.html
+++ b/contact_us.html
@@ -7,6 +7,10 @@
   <link rel="shortcut icon" href="images/logo.png" type="image/png" />
   <link rel="stylesheet" href="custom.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Google reCAPTCHA -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
 
@@ -33,8 +37,8 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="contact-hero" style="background-image: url('images/contact.jpg');  background-size: cover; background-repeat: no-repeat;">
-  <div class="container">
+<section class="contact-hero" style="background-image: url('images/contact.jpg'); background-size: cover; background-repeat: no-repeat;">
+  <div class="container py-5 text-white">
     <div class="row align-items-center">
       <div class="col-lg-6">
         <h1>Connect With Our Conservation Team</h1>
@@ -44,109 +48,107 @@
           <a href="tel:+25421541941" class="btn btn-outline-light btn-lg">Call Now</a>
         </div>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6"></div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact Form Section -->
+<section class="contact-form-section py-5" id="contact-form">
+  <div class="container">
+    <div class="row g-4">
+      <!-- Form -->
+      <div class="col-lg-7">
+        <div class="contact-form-wrapper p-4 shadow rounded bg-white">
+          <h2 class="mb-4">Send Us a Message</h2>
+          <form id="contactForm" action="YOUR_BACKEND_ENDPOINT" method="POST">
+            <div class="row g-3">
+              <div class="col-md-6">
+                <label for="name" class="form-label">Your Name</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+              </div>
+              <div class="col-md-6">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+              </div>
+            </div>
+            <div class="mb-3 mt-3">
+              <label for="subject" class="form-label">Subject</label>
+              <input type="text" class="form-control" id="subject" name="subject" required>
+            </div>
+            <div class="mb-3">
+              <label for="message" class="form-label">Your Message</label>
+              <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+            </div>
+            <!-- reCAPTCHA -->
+            <div class="mb-3">
+              <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+              <!-- Replace YOUR_SITE_KEY with your actual site key -->
+            </div>
+            <button type="submit" class="btn btn-primary">Send Message</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- Contact Info -->
+      <div class="col-lg-5">
+        <div class="contact-info-wrapper p-4 shadow rounded bg-white h-100">
+          <h2 class="mb-4">Contact Information</h2>
+          <div class="contact-info-item mb-3 d-flex align-items-start">
+            <div class="icon me-3">
+              <i class="fas fa-map-marker-alt fa-lg text-primary"></i>
+            </div>
+            <div class="content">
+              <h5>Our Location</h5>
+              <p>123 Conservation Way, Nairobi, Kenya</p>
+            </div>
+          </div>
+          <div class="contact-info-item mb-3 d-flex align-items-start">
+            <div class="icon me-3">
+              <i class="fas fa-phone-alt fa-lg text-primary"></i>
+            </div>
+            <div class="content">
+              <h5>Phone Number</h5>
+              <p>+254 215 419 41</p>
+            </div>
+          </div>
+          <div class="contact-info-item mb-3 d-flex align-items-start">
+            <div class="icon me-3">
+              <i class="fas fa-envelope fa-lg text-primary"></i>
+            </div>
+            <div class="content">
+              <h5>Email Address</h5>
+              <p>info@clawsandpaws.org</p>
+            </div>
+          </div>
+          <div class="contact-info-item d-flex align-items-start">
+            <div class="icon me-3">
+              <i class="fas fa-clock fa-lg text-primary"></i>
+            </div>
+            <div class="content">
+              <h5>Working Hours</h5>
+              <p>Mon-Fri: 8:00 AM - 5:00 PM</p>
+              <p>Sat: 9:00 AM - 2:00 PM</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-
-  <!-- Contact Form Section -->
-  <section class="contact-form-section" id="contact-form">
-    <div class="container">
-      <div class="row">
-        <!-- Contact Form -->
-        <div class="col-lg-7">
-          <div class="contact-form-wrapper">
-            <h2>Send Us a Message</h2>
-            <form id="contactForm">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="name">Your Name</label>
-                    <input type="text" class="form-control" id="name" required>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" class="form-control" id="email" required>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="subject">Subject</label>
-                <input type="text" class="form-control" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="message">Your Message</label>
-                <textarea class="form-control" id="message" rows="5" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Send Message</button>
-            </form>
-          </div>
-        </div>
-
-        <!-- Contact Info -->
-        <div class="col-lg-5">
-          <div class="contact-info-wrapper">
-            <h2>Contact Information</h2>
-            <div class="contact-info-item">
-              <div class="icon">
-                <i class="fas fa-map-marker-alt"></i>
-              </div>
-              <div class="content">
-                <h4>Our Location</h4>
-                <p>123 Conservation Way, Nairobi, Kenya</p>
-              </div>
-            </div>
-            <div class="contact-info-item">
-              <div class="icon">
-                <i class="fas fa-phone-alt"></i>
-              </div>
-              <div class="content">
-                <h4>Phone Number</h4>
-                <p>+254 215 419 41</p>
-              </div>
-            </div>
-            <div class="contact-info-item">
-              <div class="icon">
-                <i class="fas fa-envelope"></i>
-              </div>
-              <div class="content">
-                <h4>Email Address</h4>
-                <p>info@clawsandpaws.org</p>
-              </div>
-            </div>
-            <div class="contact-info-item">
-              <div class="icon">
-                <i class="fas fa-clock"></i>
-              </div>
-              <div class="content">
-                <h4>Working Hours</h4>
-                <p>Monday - Friday: 8:00 AM - 5:00 PM</p>
-                <p>Saturday: 9:00 AM - 2:00 PM</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<!-- Map Section -->
+<section class="map-section">
+  <div class="container-fluid p-0">
+    <div class="map-wrapper">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.808477395489!2d36.82115931475397!3d-1.292359635980772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10d664fecf0f%3A0x7e3b2d4e6e3b2d4e!2sNairobi%20National%20Park!5e0!3m2!1sen!2ske!4v1620000000000!5m2!1sen!2ske" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Map Section -->
-  <section class="map-section">
-    <div class="container-fluid p-0">
-      <div class="map-wrapper">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.808477395489!2d36.82115931475397!3d-1.292359635980772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10d664fecf0f%3A0x7e3b2d4e6e3b2d4e!2sNairobi%20National%20Park!5e0!3m2!1sen!2ske!4v1620000000000!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
-    </div>
-  </section>
-
-  
-  <footer>
-        
-    <a href="index.html" class="btn btn-primary"> Made with love by Olof Jonson</a>
+<footer class="text-center py-4">
+  <a href="index.html" class="btn btn-primary"> Made with love by Olof Jonson</a>
 </footer>
+
 </body>
 </html>
